# assembly-widescreen-2022

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  build-release.sh  build.rs  devlog.md  kern2glsl.py  kernel.py  package.sh  sync.rocket  todo.md
buildscripts/: Dockerfile  Dockerfile-arm  Dockerfile-host  Dockerfile-rpi  build-release.sh
resources/: assembly156.raw  bloom.frag  bloom.wgsl  bloom_x.wgsl  bloom_y.wgsl  blurx.frag  blury.frag  darksecond96.raw  defer.wgsl  deliberate64.raw  epoch64.raw  faemiyah64.raw  flatshade.frag  gouraud.vert  ivory96.raw  jml96.raw  light.wgsl  mehu.raw  mercury64.raw  output.wgsl  particle.frag  particle.vert  peisik64.raw  poly.vert  post.frag  post.wgsl  programs.txt  quad.abuf  shader.frag  shader.vert  shader.wgsl  sky.frag  ssao_bloom_x.wgsl  ssao_bloom_y.wgsl  two_pass_gaussian_blur.frag
src/: city.rs  distance_field_model.rs  fbo_builder.rs  fps_counter.rs  gles2_buffer.rs  gles2_error.rs  gles2_fbo.rs  gles2_helpers.rs  gles2_shader.rs  lib.rs  logger.rs  main.rs  model.rs  particle_system.rs  player.rs  post.rs  render_pass.rs  renderer.rs  resolution.rs  scene.rs  shader_quad.rs  sync.rs  terrain.rs  vertex_data.rs
src/fbo_builder/: gles2_fbo.rs
src/glesv2/: buffer.rs  error.rs  framebuffer.rs  info_log.rs  macros.rs  mod.rs  program.rs  renderbuffer.rs  resource_mapper.rs  shader.rs  texture.rs  uniform_value.rs
src/glesv2_raii/: buffer.rs  error.rs  framebuffer.rs  macros.rs  mod.rs  program.rs  renderbuffer.rs  resource_mapper.rs  shader.rs  texture.rs  uniform_value.rs
src/particle_system/: mod.rs  particle_spawner.rs
src/renderer/: mod.rs  pass.rs  screen_pass.rs  screen_quad.rs  shader_quad.rs
src/sync/: frame_counter.rs  mod.rs
