[package]
name = "demo"
version = "0.1.0"
authors = ["Lauri Gustafsson <me@gustafla.space>"]
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_warn"] }
bytemuck = { version = "1.11.0", features = ["derive"] }
anyhow = "1.0.59"
lewton = "0.10.2"
bincode = "1.3.3"
rust-rocket = "0.7.2"
rustfft = "6.0.1"
pico-args = "0.5.0"
alsa = "0.6.0"
glam = { version = "0.21.3", features = ["bytemuck"] }
pollster = "0.2.5"
include_dir = "0.7.2"
rand_xoshiro = "0.6.0"
rand = { version = "0.8.5", default-features = false }
color_space = "0.5.3"
simdnoise = "3.1.6"
wgpu = "0.13.1"
winit = "0.26.1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
